# controller/TestController.go
@@ -1,7 +1,10 @@
 package controller
 
 import (
+	"crypto/md5"
+	"fmt"
 	"github.com/gin-gonic/gin"
+	"gorm.io/gorm"
 	"net/http"
 	"terminal/models"
 	"terminal/util"
@@ -13,10 +16,61 @@ import (
 // @Produce json
 // @Router  /test [get]
 func Test(c *gin.Context) {
-	if err := CommentInsertTest(); err != nil {
+	if err := MatchInsertTest(); err != nil {
 		util.UniformReturn(c, http.StatusOK, false, "test failed", err.Error())
 	} else {
 		util.UniformReturn(c, http.StatusOK, true, "test succeeded", "")
+	}
+}
+
+// TestUpload
+// @Summary used to test the file upload function
+// @Param   file formData file false "the avatar image file selected by the user"
+// @Router  /test/upload [post]
+// @accept  multipart/form-data
+func TestUpload(c *gin.Context) {
+	//c.Request.FormFile("file")
+	file, fileHeader, err := c.Request.FormFile("file")
+	if err != nil {
+		util.UniformReturn(c, http.StatusOK, false, err.Error(), "")
+	}
+
+	// calculate the file's hash mapping
+	b := make([]byte, fileHeader.Size)
+	fileCopy := file
+	_, err = fileCopy.Read(b)
+	if err != nil {
+		util.UniformReturn(c, http.StatusOK, false, err.Error(), "")
+	}
+	hash := fmt.Sprintf("%x", md5.Sum(b))
+
+	// query whether the file already exists
+	image := new(models.Image)
+	if err := models.DB.Where("hash = ?", hash).First(image).Error; err != nil {
+		if err != nil {
+			if err != gorm.ErrRecordNotFound {
+				// system error
+				util.UniformReturn(c, http.StatusOK, false, err.Error(), "")
+				return
+			} else {
+				// the file doesn't exist
+				// upload the file and store its hash and url path into the database
+				address, err := util.COSUpload(c)
+				if err != nil {
+					util.UniformReturn(c, http.StatusOK, false, err.Error(), "")
+				}
+
+				image.Path = address
+				image.Hash = hash
+				if err := models.DB.Create(image).Error; err != nil {
+					util.UniformReturn(c, http.StatusOK, false, err.Error(), "")
+				}
+				util.UniformReturn(c, http.StatusOK, true, "upload successfully", address)
+			}
+		}
+	} else {
+		// the file exists, return the path directly
+		util.UniformReturn(c, http.StatusOK, true, "file exists", image.Path)
 	}
 }
 
@@ -77,5 +131,16 @@ func CommentInsertTest() error {
 	} else {
 		return models.DB.Create(&comment).Error
 	}
+}
 
+func MatchInsertTest() error {
+	match := models.Match{
+		MatcherID: 1,
+		MatchedId: 1,
+	}
+	if err := models.DB.Create(&match).Error; err != nil {
+		return err
+	} else {
+		return nil
+	}
 }
